@@ -1,0 +1,4 @@
+#
+# CygWin toolchain overrides
+#
+CC = gcc
