@@ -2,6 +2,7 @@ include common.mk
 
 XENO_FETCH_URI = http://monkey.org/~provos/libevent-1.2a.tar.gz
 
-XENO_PATCH_FILE = libevent.patch
+XENO_PATCH_FILE = /tmp/libevent.patch
+
 
 include xeno.mk
